--- a/static/style.css
+++ b/static/style.css
@@ -25,7 +25,7 @@ a:active { color:#940000; }
 
 #logo { right: 0; width: 100px; height: 100px; background: url("/static/gif/raido.gif") no-repeat; float: right; text-indent: -9999999px; padding-left: 40px; }
 
-#container { width: 750px; margin: 0 auto; line-height: 1.2em; color: #666666; background-color: #FFFFFF; padding-top: 100px; }
+#container { width: 750px; margin: 0 auto; line-height: 1.2em; color: #666666; background-color: #FFFFFF; padding-top: 50px; }
 
 #header { width: 100%; border: 0px; padding-top: 10px; padding-bottom: 10px; }
 
@@ -41,21 +41,23 @@ a:active { color:#940000; }
 
 #content h2 { font-size: 17px; }
 
-#content p { border-bottom: none; padding-left: 30px; padding-bottom: 6px; color: #000; }
+#content p { border-bottom: none; padding-left: 30px; }
 
 .dashed{ border-bottom: 1px dashed!important; }
 .first{ margin-top: 0!important; }
+.date{ font-size:11px; padding-top:2px; }
+.summary{ color: #000; padding-top:5px; }
 
 ul.details { list-style: none; padding-left: 0px; padding-top: 0px;}
 ul.details li { clear: both; }
 ul.details h2 { margin-top: 0; margin-bottom: 0.5em; padding-top: 20px;  }
 ul.details h2 a { border: none; color:#666666; outline: none; }
 ul.details h2 a:visited { border: none; color:#666666; }
-ul.details li p { padding-top: 5px; }
+/* ul.details li p { padding-top: 5px; } */
 
 ul.details li p span { font-size: 18px; }
 
-ul.details ul { list-style: disc; padding-left: 50px; padding-top: 0px;}
+ul.details ul { list-style: none; padding-left: 50px; padding-top: 0px;}
 ul.details ul li { padding-bottom: 0px; }
 ul.details ul li h2 { margin-top: 0; margin-bottom: 0.5em; padding-top: 10px; }
 ul.details ul li h2 a { color: #f4c464; font-size: 16px; }
@@ -63,6 +65,10 @@ ul.details ul li h2 a:link { color: #f4c464; border-bottom: 1px solid; outline: 
 ul.details ul li h2 a:visited { color: #f4c464; border-bottom: 1px solid; outline: none }
 ul.details ul li h2 a:hover { border-bottom: 1px dotted; }
 ul.details ul li h2 a:active { color:#940000; }
+
+#inline-list {margin: 1em; font-family: Verdana, sans-serif;}
+#inline-list ul li {display: inline; padding-right:5px;padding-bottom:5px;}
+#inline-list ul li a {color: #666666;}
 
 /**************** images styles ****************/		
 a img{ border: none; }
