--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,8 @@ a:visited { color: #EBA34A; border-bottom: none; }
 a:hover { border-bottom: 1px dotted; }
 a:active { color:#940000; }
 
+code { margin: 1em 3em;	color: #999; border-left: 2px solid #999; padding-left: 1em; }
+
 #logo { right: 0; width: 100px; height: 100px; background: url("/static/gif/raido.gif") no-repeat; float: right; text-indent: -9999999px; padding-left: 40px; }
 
 #container { width: 750px; margin: 0 auto; line-height: 1.2em; color: #666666; background-color: #FFFFFF; padding-top: 50px; }
@@ -33,8 +35,6 @@ a:active { color:#940000; }
 #container2 { width: 100%; margin: 0 auto; }
 
 #content { padding-right: 10px; float: left; padding-top: 30px; padding-bottom: 70px; }
-#content h2 { font-size: 20px; padding-bottom: 0.5em;}
-#content p { border-bottom: none; color: #000; }
 
 #inline-list {margin: 1em; font-family: arial, sans-serif;}
 #inline-list ul li {display: inline; padding-right:5px;padding-bottom:5px;}
@@ -44,6 +44,8 @@ a:active { color:#940000; }
 #main-text p {line-height:1.7em;padding-top:0.5em;padding-bottom:0.5em;}
 #main-text ul {list-style:disc;list-style-position:outside;margin-left:20px;}
 #main-text ul li {line-height:1.7em;text-indent:5px;padding-left:5px;}
+#main-text h2 {font-size: 20px;padding-top:0.5em;padding-bottom:0.5em;}
+
 /*#main-text ul ul {margin-left:20px;}*/
 
 #tags { padding-top:10px; font-size:12px; }
@@ -60,20 +62,20 @@ a:active { color:#940000; }
 
 .dashed{ border-bottom: 1px dashed!important; }
 .uline{ border-bottom: 1px dashed!important; }
-.date{ font-size:11px; padding-left:2px; }
+.date{ font-size:11px; color:#ccc; padding-left:1px; }
 .summary{ color: #000; padding-top:5px; }
 .fwnormal{ font-weight: normal; }
 
 ul.details { list-style: none; padding-left: 0px; padding-top: 0px;}
 ul.details li { clear: both; }
-ul.details h2 { margin-top: 0; padding-top: 20px;  }
+ul.details h2 {margin-top: 0; font-size: 18px; padding-top: 0.5em;}
 ul.details h2 a { border: none; color:#666666; outline: none; }
 ul.details h2 a:visited { border: none; color:#666666; }
 ul.details li p span { font-size: 18px; }
 
 ul.details ul { list-style: none; padding-left: 50px; padding-top: 0px;}
 ul.details ul li { padding-bottom: 0px; padding-top:5px; }
-ul.details ul li h2 { margin-top: 0; margin-bottom: 0.5em; padding-top: 10px; }
+ul.details ul li h2 { margin-top: 0;margin-bottom: 0.5em; padding-top: 10px; }
 ul.details ul li h2 a { color: #EBA34A; font-size: 16px; }
 ul.details ul li h2 a:link { color: #EBA34A; border-bottom: 1px solid; outline: none }
 ul.details ul li h2 a:visited { color: #EBA34A; border-bottom: 1px solid; outline: none; }
