--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,7 @@ a:hover { border-bottom: 1px dotted; }
 a:active { color:#940000; }
 
 code { margin: 1em 3em;	color: #999; border-left: 2px solid #999; padding-left: 1em; }
+blockquote { margin: 1em 3em;	color: #999; border-left: 2px solid #999; padding-left: 1em; }
 
 #logo { right: 0; width: 100px; height: 100px; background: url("/static/gif/raido.gif") no-repeat; float: right; text-indent: -9999999px; padding-left: 40px; }
 
