--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,9 @@ blockquote { margin: 1em 3em;	color: #999; border-left: 2px solid #999; padding-
 #main-text p {line-height:1.7em;padding-top:0.5em;padding-bottom:0.5em;}
 #main-text ul {list-style:disc;list-style-position:outside;margin-left:20px;}
 #main-text ol {list-style-position:outside;margin-left:20px;}
-#main-text ul li {line-height:1.7em;text-indent:5px;padding-left:5px;}
+/*#main-text ul li {line-height:1.7em;text-indent:5px;padding-left:5px;}*/
+#main-text ul li {line-height:1.7em;}
+#main-text ol li {line-height:1.7em;}
 #main-text h2 {font-size: 20px;padding-top:0.5em;padding-bottom:0.5em;}
 
 /*#main-text ul ul {margin-left:20px;}*/
