Fixed code display: the pip markdown-pygments package was missing

--- a/static/pygments.css
+++ b/static/pygments.css
@@ -1,5 +1,5 @@
 div.syntax .hll { background-color: #ffffcc }
-div.syntax  { background: #f8f8f8; }
+div.syntax  { background: #f2eeee; }
 div.syntax .c { color: #8f5902; font-style: italic } /* Comment */
 div.syntax .err { color: #a40000; border: 1px solid #ef2929 } /* Error */
 div.syntax .g { color: #000000 } /* Generic */
